# SQLAnyWhere

./: .gitignore  README.md
engine/: Cargo.toml
engine/py_lib/: Cargo.toml
engine/py_lib/src/: lib.rs
engine/src/: lib.rs  main.rs  sa_helper.rs
engine/src/builder/: pipelines.rs
engine/src/datafusion/: core.rs  datafusion.rs  mod.rs
engine/src/helper/: mod.rs  sql.rs
engine/src/modules/: datafusion.rs  fs.rs  mod.rs  utils.rs
engine/src/object_storage/: local_storage.rs  mod.rs  s3.rs  sa_local_storage.rs  storage.rs  utils.rs
engine/src/query/: datafusion.rs  mod.rs  sa_datafusion.rs  sa_file_options.rs
engine/src/query/file_format/: mod.rs  sa_csv.rs  sa_file_register.rs  sa_parquet.rs
engine/src/sa_datafusion/: mod.rs  sa_file_options.rs
engine/src/sa_datafusion/sa_file_format/: mod.rs  sa_csv.rs  sa_parquet.rs
engine/src/sa_system/: mod.rs
engine/tests/: test_datafusion.rs
interface/: example_py.py  requirements.txt
