[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "44.0.0"
datafusion-expr="44.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.3", features = ["derive"] }
tempfile = "3.3.0"
async-trait = "0.1"
object_store = { version = "0.11.2", features=["aws"] }
url = "2.3.1"